<resources>
    <string name="app_name">GroceryBuddy</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="your_groceries">Your Groceries</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="notification">Notifications</string>
    <string name="add_new_item">Add New Item</string>
    <string name="add_item">Add Item</string>
    <string name="expired">expired</string>
    <string name="expires_in">expires in</string>
    <string name="error_message">Error Message</string>
    <string name="error_message_stars">**Error message</string>
    <string name="bought">bought on</string>
    <string name="enter_name">+ enter the name</string>
    <string name="name_disc">add a new item to your inventory</string>
    <string name="expiry_date">expiry date?</string>
    <string name="date_disc">09/13/2022</string>
    <string name="category">pick a category</string>
    <string name="category1">pantry</string>
    <string name="category2">meat</string>
    <string name="category3">dairy</string>
    <string name="category4">veggies</string>
    <string name="category5">other</string>
    <string name="scan_bill_title">Scan Your Bill</string>
    <string name="scan_bill">scan your bill</string>
    <string name="scan_disc">take a picture of your bill to enter data</string>
    <string name="used">used up</string>
    <string name="throw_out">throw out</string>
    <string name="used_confirmation">are you sure you this item is used up?</string>
    <string name="throw_confirmation">are you sure you want to throw out this item?</string>
    <string name="removed_success">removed successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>