<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAD7CD"
    tools:context=".Register">

    <Button
        android:id="@+id/btn_ica8_register2"
        android:layout_width="220dp"
        android:layout_height="59dp"
        android:layout_marginTop="540dp"
        android:backgroundTint="#344E41"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_txt_ica8_firstname_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_txt_ica8_pwd_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="49dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_txt_ica8_email_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_txt_ica8_email_register"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_ica8_email_register"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_txt_ica8_email_register"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edit_txt_ica8_firstname_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_txt_ica8_firstname_register"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_ica8_firstname_register" />

    <TextView
        android:id="@+id/error_msg_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:maxLines="3"
        android:text="@string/error_message_stars"
        android:textColor="#DD2C00"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_txt_ica8_pwd_register"
        app:layout_constraintTop_toBottomOf="@+id/edit_txt_ica8_pwd_register" />
</androidx.constraintlayout.widget.ConstraintLayout>